--- a/coding-bootcamp-testimonials-slider-master/css/style.css
+++ b/coding-bootcamp-testimonials-slider-master/css/style.css
@@ -104,7 +104,7 @@ background-size: 330px 315px,60px 50px;
     text-align: center;
     color: var(--clr-primary-900);
     font-size: var(--fs-body_mobile);
-    font-weight: var(--fw-medium);
+    font-weight: var(--fw-bold);
     max-width: 320px;
    
 }
