--- a/coding-bootcamp-testimonials-slider-master/css/style.css
+++ b/coding-bootcamp-testimonials-slider-master/css/style.css
@@ -21,7 +21,7 @@
     --fs-name_mobile: 1rem;
     --fs-job_mobile: .9rem;
     --fs-body_destop: 2rem;
-    --br: 7px;
+    --br: 2px;
 }
 
 /* mobile Section */
@@ -104,7 +104,7 @@ background-size: 330px 315px,60px 50px;
     text-align: center;
     color: var(--clr-primary-900);
     font-size: var(--fs-body_mobile);
-    font-weight: var(--fw-bold);
+    font-weight: var(--fw-light);
     max-width: 320px;
    
 }
